--- a/css-files/index.css
+++ b/css-files/index.css
@@ -41,14 +41,14 @@ main {
     justify-content: space-evenly;
     gap: 30px;
     align-items: center;
-    border: 5px solid #ffcc00; 
     background-color: #282828; 
     width: 90%;
-    max-width: 800px;
+    max-width: 1000px;
     margin: 20px auto;
     border-radius: 20px; 
     padding: 20px;
     box-sizing: border-box;
+    height: 60%;
 }
 
 /* Game options wrapper section with space between buttons */
@@ -116,29 +116,23 @@ main {
 
 /* Game Grid container */
 #game-grid {
-    border: 5px solid #ffcc00;
     display: flex;
-    flex-wrap: wrap;
+    border: 5px solid #ffcc00;
     width: 90%;
-    max-width: 500px;
+    max-width: 700px;
     height: 50vh;
     margin-top: 20px;
     border-radius: 10px;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 /* Grid items */
 #game-grid div {
-    width: calc(100% / var(--grid-size, 2) - 2px);
-    height: calc(100% / var(--grid-size, 2) - 2px);
+    flex: 1;
     background-color: #ffffff;
-    margin: 1px;
-    cursor: pointer;
+    margin: 0;
+    cursor: default;
     transition: background-color 0.3s ease;
-    border: 1px solid #ffcc00;
-}
-
-#game-grid div:hover {
-    background-color: #ffcc00;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    border: 1px solid black;
 }
